# aurora

./: README.md  config.toml  pyproject.toml
.github/workflows/: isort.yml
aurora/: __main__.py  bot.py  utils.py
