[tool.poetry]
name = "aurora-bot"
version = "0.1.0"
description = "A moderation bot for Discord designed to be easy-to-use and customizable."
authors = ["mudkipdev <mudkip@mudkip.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aurora"}]

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.8.1"
isort = "^5.12.0"
mypy = "^1.3.0"
ruff = "^0.0.270"
python-dotenv = "^1.0.0"
disnake-jishaku = "^2.6.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = 3.11
strict = true
pretty = true
install_types = true
ignore_missing_imports = true
ignore_missing_imports_per_module = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
